feat: add TTS model test